Add some changes to tasks